--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>Test Project</title>
     <style>
         body{
-          background-color: #ddd;
+          background-color: red;
+          color:green;
         }
     </style>
   </head>
   <body>
         <h1> Test Project </h1>
-
+        <h2> Craziest one yet!</h2>
   </body>
 </html>
