Feel like pablo!

--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <style>
         body{
           background-color: red;
-          color:green;
+          color:white;
+          font-size:5em;
+          text-align: center;
         }
     </style>
   </head>
   <body>
         <h1> Test Project </h1>
         <h2> Craziest one yet!</h2>
+        <h2> FEEL LIKE PABLO!!</h2>
+
   </body>
 </html>
